# bbj-be

./: .gitignore  Cargo.toml
migrations/2025-10-17-165503-0000_create_divisions/: down.sql  up.sql
migrations/2025-10-17-165506-0000_create_users/: up.sql
src/: lib.rs  main.rs  middleware.rs  schema.rs
src/controllers/: login.rs  mod.rs  user.rs
src/endpoints/: default.rs  mod.rs  user.rs
src/models/api/: login.rs  user.rs
src/models/db/: division.rs  mod.rs  user.rs
src/routes/: v1.rs
