[package]
name = "bbj-be"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
chrono = {version = "0.4.42", features = ["serde"]}
diesel = {version = "2.3.2", features = ["mysql", "chrono", "r2d2"]}
dotenv = "0.15.0"
dotenvy = "0.15.7"
email_address = "0.2.9"
hex = "0.4.3"
jsonwebtoken = {version = "10.1.0", features = ["rust_crypto"]}
serde = "1.0.228"
serde_json = "1.0.145"
sha2 = "0.10.9"
